--- a/templates/digest.html
+++ b/templates/digest.html
@@ -135,6 +135,20 @@
       footer > p {
         margin: 5px;
       }
+
+      footer > .name {
+        margin-top: 15px;
+      }
+
+      footer > .archive {
+        margin-bottom: 10px;
+      }
+
+      footer > .archive a {
+        font-size: 16px;
+        text-decoration: none;
+        color: #df4242;
+      }
     </style>
   </head>
   <body>
@@ -154,7 +168,9 @@
       {{end}}
     </div>
     <footer>
+      <p class="archive"><a href="{{.ArchiveURL}}">Archive</a></p>
       <p>Generated at {{.GeneratedAt}}</p>
+      <!-- TODO: Add link to Github -->
     </footer>
   </body>
 </html>
