Database credentials are now read from env. Moved act of connecting to database to cmd package

--- a/templates/digest.html
+++ b/templates/digest.html
@@ -126,14 +126,14 @@
       /* --- FOOTER --- */
       footer {
         text-align: center;
-        font-weight: var(--font-weight-light);
-        font-size: 12px;
-        color: var(--off-black);
-        font-family: 'Roboto', sans-serif;
       }
 
       footer > p {
         margin: 5px;
+        font-weight: var(--font-weight-light);
+        font-size: 12px;
+        color: var(--off-black);
+        font-family: 'Roboto', sans-serif;
       }
 
       footer > .name {
@@ -142,12 +142,15 @@
 
       footer > .archive {
         margin-bottom: 10px;
+        font-weight: var(--font-weight-light);
+        font-size: 16px;
+        color: #df4242;
+        font-family: 'Roboto Slab', serif;
       }
 
       footer > .archive a {
-        font-size: 16px;
         text-decoration: none;
-        color: #df4242;
+        color: inherit;
       }
     </style>
   </head>
