--- a/static/css/digest.css
+++ b/static/css/digest.css
@@ -7,11 +7,17 @@
   margin-top: 4px;
 }
 
+.rank > a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 400;
+}
+
 .title {
   font-weight: 400;
 }
 
-.title.is-read {
+.rank.is-read, .title.is-read {
   font-weight: 300;
 }
 
