Made archive link smaller

--- a/templates/digest.gohtml
+++ b/templates/digest.gohtml
@@ -51,7 +51,7 @@
         {{end}}
       </div>
       <footer class="text-center">
-        <p class="slab h4 mb-4"><a href="{{.ArchiveURL}}">Archive</a></p>
+        <p class="h5 mb-4"><a href="{{.ArchiveURL}}">Archive</a></p>
         <p class="mb-0">
           The unique ID of this device is
           <mark data-toggle="tooltip"
