--- a/web/static/css/digest.css
+++ b/web/static/css/digest.css
@@ -5,26 +5,19 @@
   font-size: 1.2rem;
   color: #7e7e7e;
   margin-top: 4px;
-  font-weight: 400;
 }
 
-.rank > a {
+.rank .btn-link {
   color: inherit;
   text-decoration: none;
-}
-
-.rank button {
-  border: none;
-  color: inherit;
-  font-weight: inherit;
-  background: none;
+  font-weight: 400;
 }
 
 .title {
   font-weight: 400;
 }
 
-.rank.is-read, .title.is-read {
+.is-read, .is-read {
   font-weight: 300;
 }
 
