--- a/web/templates/digest.gohtml
+++ b/web/templates/digest.gohtml
@@ -40,13 +40,15 @@
                   <p>#{{.Rank}}</p>
                 {{else}}
                   <form action="{{.MarkAsReadURL}}" method="POST" data-id="{{.ID}}">
-                    <button type="submit" class="slab m-0 p-0">#{{.Rank}}</button>
+                    <button type="submit" class="slab btn-link m-0 p-0">#{{.Rank}}</button>
                   </form>
                 {{end}}
               </div>
             </div>
             <div class="col">
-              <h3 class="title{{if .IsRead}} is-read{{end}} slab mb-0" data-id="{{.ID}}"><a href="{{.URL}}">{{.Title}}</a></h3>
+              <form action="{{.URL}}" method="POST">
+                <button type="submit" class="title{{if .IsRead}} is-read{{end}} btn-link h3 slab m-0 p-0" data-id="{{.ID}}">{{.Title}}</button>
+              </form>
               <p class="mb-0">{{.Site}} &middot; {{.Points}} points &middot; <a class="text-dark" href="{{.CommentsURL}}">{{.NumComments}} comments</a></p>
             </div>
           </div>
