--- a/web/templates/digest.gohtml
+++ b/web/templates/digest.gohtml
@@ -46,9 +46,13 @@
               </div>
             </div>
             <div class="col">
-              <form action="{{.URL}}" method="POST">
-                <button type="submit" class="title{{if .IsRead}} is-read{{end}} btn-link h3 slab m-0 p-0" data-id="{{.ID}}">{{.Title}}</button>
-              </form>
+              {{if .IsRead}}
+                <h3 class="title{{if .IsRead}} is-read{{end}} slab mb-0" data-id="{{.ID}}"><a href="{{.URL}}">{{.Title}}</a></h3>
+              {{else}}
+                <form action="{{.URL}}" method="POST">
+                  <button type="submit" class="title{{if .IsRead}} is-read{{end}} btn-link h3 slab m-0 p-0" data-id="{{.ID}}">{{.Title}}</button>
+                </form>
+              {{end}}
               <p class="mb-0">{{.Site}} &middot; {{.Points}} points &middot; <a class="text-dark" href="{{.CommentsURL}}">{{.NumComments}} comments</a></p>
             </div>
           </div>
