Stories are now being marked as read using javascript

--- a/web/templates/digest.gohtml
+++ b/web/templates/digest.gohtml
@@ -47,10 +47,10 @@
             </div>
             <div class="col">
               {{if .IsRead}}
-                <h3 class="title{{if .IsRead}} is-read{{end}} slab mb-0" data-id="{{.ID}}"><a href="{{.URL}}">{{.Title}}</a></h3>
+                <h3 class="title is-read slab mb-0" data-id="{{.ID}}"><a href="{{.URL}}">{{.Title}}</a></h3>
               {{else}}
-                <form action="{{.URL}}" method="POST">
-                  <button type="submit" class="title{{if .IsRead}} is-read{{end}} btn-link h3 slab m-0 p-0" data-id="{{.ID}}">{{.Title}}</button>
+                <form action="{{.URL}}" method="POST" class="read-form">
+                  <button type="submit" class="title btn-link h3 slab m-0 p-0" data-id="{{.ID}}">{{.Title}}</button>
                 </form>
               {{end}}
               <p class="mb-0">{{.Site}} &middot; {{.Points}} points &middot; <a class="text-dark" href="{{.CommentsURL}}">{{.NumComments}} comments</a></p>
@@ -105,9 +105,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Input field for detecting cached loads. -->
-    <input type="text" id="refresh" value="no">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
