--- a/web/static/css/digest.css
+++ b/web/static/css/digest.css
@@ -5,12 +5,12 @@
   font-size: 1.2rem;
   color: #7e7e7e;
   margin-top: 4px;
+  font-weight: 400;
 }
 
 .rank .btn-link {
   color: inherit;
   text-decoration: none;
-  font-weight: 400;
 }
 
 .title {
@@ -18,7 +18,7 @@
   text-align: left;
 }
 
-.is-read, .is-read {
+.is-read {
   font-weight: 300;
 }
 
