--- a/web/static/css/global.css
+++ b/web/static/css/global.css
@@ -4,6 +4,10 @@ body {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+h1, h2 {
+  font-weight: 300 !important;
+}
+
 a, .btn-link {
   color: #df4242;
 }
@@ -38,5 +42,4 @@ a:hover, .btn-link:hover {
 
 .slab {
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-weight: 300;
 }
